@@ -2,7 +2,12 @@
 
 <!-- This section supplements the head section of the base.html file-->
 {% block head %}
-Bellman's Cafe v1.4
+
+<script type=text/javascript>
+    divbanner = document.getElementById('divbanner');
+    divbanner.innerHTML += "Bellman's Cafe v1.4";
+</script>
+
 <style>
 /*
     #divleft and #divright dissect the bellman page
