@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
 {% block head %}
-Home
+<script type=text/javascript>
+    divbanner = document.getElementById('divbanner');
+    divbanner.innerHTML += "Home";
+</script>
 {% endblock %}
 
 {% block body %}
